cluster/gitops/flux-system/flux/receiver/webhook-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-receiver
  labels:
    external-dns.home.arpa/publish: "true"
spec:
  hostnames:
    - flux-receiver.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
